# ralph

./: !  .cursorrules  .env  .env.example  .gitignore  .repo_ignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE  Makefile  PARALLEL_REWRITE_COMPLETE.md  PORTFOLIO.md  README.md  REWRITE_STATUS.md  SECURITY.md  cliff.toml
crates/ralph/: Cargo.toml  README.md  build.rs
crates/ralph/assets/: ralph_readme.md
crates/ralph/assets/agents_templates/: generic.md  go.md  python.md  rust.md  typescript.md
crates/ralph/assets/prompts/: code_review.md  completion_checklist.md  iteration_checklist.md  merge_conflicts.md  phase2_handoff_checklist.md  scan.md  scan_general_v2.md  scan_innovation_v1.md  scan_innovation_v2.md  scan_maintenance_v1.md  scan_maintenance_v2.md  task_builder.md  task_decompose.md  task_updater.md  worker.md  worker_phase1.md  worker_phase2.md  worker_phase2_handoff.md  worker_phase3.md  worker_single_phase.md
crates/ralph/src/: AGENTS.md  agent.rs  celebrations.rs  completions.rs  config.rs  constants.rs  contracts.rs  debuglog.rs  doctor_cmd.rs  error_messages.rs  eta_calculator.rs  execution_history.rs  fsutil.rs  gitutil.rs  init_cmd.rs  jsonc.rs  lib.rs  lock.rs  main.rs  notification.rs  outpututil.rs  productivity.rs  progress.rs  prompt_cmd.rs  promptflow.rs  prompts.rs  queue.rs  redaction.rs  reports.rs  run_cmd.rs  runner.rs  runutil.rs  runutil_tests.rs  scan_cmd.rs  signal.rs  task_cmd.rs  timeutil.rs  tui.rs  undo.rs  webhook.rs
crates/ralph/src/agent/: args.rs  parse.rs  profiles.rs  repoprompt.rs  resolve.rs
crates/ralph/src/cli/: app.rs  app_parity.rs  args.rs  cleanup.rs  color.rs  completions.rs  config.rs  context.rs  daemon.rs  doctor.rs  helpers.rs  init.rs  interactive.rs  migrate.rs  mod.rs  plugin.rs  prd.rs  productivity.rs  prompt.rs  queue.rs  run.rs  runner.rs  scan.rs  spec.rs  task.rs  tests.rs  tui.rs  tutorial.rs  undo.rs  version.rs  watch.rs  webhook.rs
crates/ralph/src/commands/: app.rs  cleanup.rs  cli_spec.rs  context.rs  doctor.rs  init.rs  mod.rs  prd.rs  prompt.rs  scan.rs  task.rs  watch.rs
crates/ralph/src/config/: layer.rs  mod.rs  resolution.rs  tests.rs  trust.rs  validation.rs
crates/ralph/src/contracts/: blocking.rs  cli_spec.rs  config.rs  machine.rs  mod.rs  model.rs  queue.rs  runner.rs  session.rs  task.rs
crates/ralph/src/execution_history/: analytics.rs  model.rs  storage.rs  tests.rs
crates/ralph/src/fsutil/: atomic.rs  mod.rs  paths.rs  safeguard.rs  temp.rs  tests.rs
crates/ralph/src/git/: branch.rs  clean.rs  commit.rs  error.rs  github_cli.rs  issue.rs  lfs.rs  mod.rs  pr.rs  status.rs  workspace.rs  worktree.rs
crates/ralph/src/lock/: acquisition.rs  cleanup.rs  mod.rs  owner.rs  pid.rs  stale.rs  tests.rs
crates/ralph/src/migration/: config_migrations.rs  file_migrations.rs  history.rs  mod.rs  registry.rs  tests.rs  types.rs
crates/ralph/src/notification/: config.rs  display.rs  mod.rs  sound.rs
crates/ralph/src/output/: mod.rs  theme.rs
crates/ralph/src/plugins/: discovery.rs  manifest.rs  mod.rs  processor_executor.rs  registry.rs
crates/ralph/src/productivity/: calculations.rs  date_utils.rs  mod.rs  persistence.rs  reports.rs  tests.rs  types.rs
crates/ralph/src/prompts_internal/: instructions.rs  iteration.rs  management.rs  merge_conflicts.rs  mod.rs  registry.rs  review.rs  scan.rs  task_builder.rs  task_decompose.rs  task_updater.rs  tests.rs  util.rs  worker.rs  worker_phases.rs
crates/ralph/src/queue/: backup.rs  graph.rs  hierarchy.rs  id.rs  json_repair.rs  loader.rs  operations.rs  prune.rs  repair.rs  save.rs  search.rs  size_check.rs  validation.rs  validation_runtime_tests.rs
crates/ralph/src/redaction/: patterns.rs  tests.rs
crates/ralph/src/reports/: aging.rs  burndown.rs  dashboard.rs  history.rs  shared.rs  stats.rs
crates/ralph/src/run_cmd/: phases.rs  selection.rs  supervision.rs  tests.rs
crates/ralph/src/runner/: error.rs  execution.rs  invoke.rs  model.rs  plugin_dispatch.rs  settings.rs
crates/ralph/src/runutil/: abort.rs  ci_gate.rs  execution.rs  process_groups.rs  retry.rs  revert.rs  shell.rs  tests.rs
crates/ralph/src/sanity/: migrations.rs  mod.rs  readme.rs  unknown_keys.rs
crates/ralph/src/session/: decision.rs  mod.rs  persistence.rs  progress.rs  recovery.rs  tests.rs  validation.rs
crates/ralph/src/template/: builtin.rs  loader.rs  merge.rs  mod.rs  variables.rs
crates/ralph/src/testsupport/: git.rs  mod.rs  path.rs  runner.rs
crates/ralph/src/tui/: app.rs  app_details.rs  app_execution.rs  app_filters.rs  app_help.rs  app_id_index.rs  app_logs.rs  app_loop.rs  app_multi_select.rs  app_navigation.rs  app_options.rs  app_palette.rs  app_palette_ops.rs  app_panel.rs  app_parallel_state.rs  app_reload.rs  app_resize.rs  app_runtime.rs  app_scroll.rs  app_session.rs  app_tasks.rs  app_view.rs  config_edit.rs  dependency_graph_cache.rs  events.rs  (+11 more)
crates/ralph/tests/: agent_ci_surface_contract_test.rs  ci_gate_isolation_test.rs  cli_bundle_script_test.rs  cli_docs_tui_test.rs  config_show_format_test.rs  config_test.rs  config_trust_cli_integration_test.rs  context_cmd_test.rs  contracts_test.rs  custom_fields_test.rs  daemon_integration_test.rs  doctor_contract_test.rs  dotenv_warning_test.rs  env_override_ignored_test.rs  file_size_limit_script_test.rs  fsutil_test.rs  git_repo_ci_gate_compliance_message_test.rs  git_repo_ci_gate_custom_test.rs  git_repo_ci_gate_revert_test.rs  git_repo_dirty_state_test.rs  git_repo_init_validate_test.rs  git_repo_integration_test.rs  git_repo_upstream_test.rs  git_safety_test.rs  gitutil_test.rs  help_output_contract_test.rs  init_validation_test.rs  lock_contention_integration_test.rs  lock_race_cleanup_test.rs  lock_support.rs  lock_test.rs  machine_contract_test.rs  machine_queue_unlock_inspect_test.rs  machine_task_build_contract_test.rs  makefile_ci_contract_test.rs  migration_cli_integration_test.rs  parallel_direct_push_test.rs  parallel_done_json_safety_test.rs  parallel_e2e_test.rs  parallel_gh_preflight_test.rs  (+79 more)
(+1552 files in other folders)
