[workspace]
resolver = "2"
members = [
  "crates/ralph",
]

[profile.dev]
debug = "line-tables-only"
incremental = true

[profile.test]
debug = "line-tables-only"
incremental = true

[profile.release]
lto = "off"
codegen-units = 16
debug = false
strip = "none"

[profile.dist]
inherits = "release"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
