[package]
name = "ralph"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A Rust CLI for managing AI agent loops with a structured JSON task queue"
repository = "https://github.com/mitchfultz/ralph"
homepage = "https://github.com/mitchfultz/ralph"
readme = "../../README.md"
keywords = ["ai", "agent", "cli", "task-queue", "workflow"]
categories = ["command-line-utilities", "development-tools"]
build = "build.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
clap_complete = "4.5"
colored = "2"
ctrlc = "3.5.1"
dotenvy = "0.15.7"
env_logger = "0.11.8"
log = "0.4.29"
ratatui = "0.29.0"
crossterm = "0.28.0"
tui-textarea = "0.7"
tui-term = "0.2"
tui-scrollview = "0.5"
vt100 = "0.15"
textwrap = "0.16"
unicode-width = "0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
jsonc-parser = { version = "0.29", features = ["serde"] }
tempfile = "3.24.0"
regex = "1.11"
schemars = { version = "0.8", features = ["derive"] }
thiserror = "2.0.18"
time = { version = "0.3.45", features = ["formatting", "parsing", "macros"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
atty = "0.2"
notify-rust = { version = "4", optional = true }
chrono = { version = "0.4", features = ["serde"] }
indicatif = { version = "0.17", features = ["rayon"] }
notify = "6.1"
nucleo-matcher = "0.3"
globset = "0.4"
ureq = { version = "2.12", features = ["json"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# libc is only used on Unix platforms for process group control and PID liveness detection
[target.'cfg(unix)'.dependencies]
libc = "0.2.180"

# windows-sys is used on Windows platforms for PID liveness detection and sound playback
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Media_Audio",
] }

[features]
default = ["notifications"]
notifications = ["notify-rust"]

[dev-dependencies]
serial_test = "3.0"

[build-dependencies]
vergen = { version = "8.3", features = ["git", "gitcl", "build"] }
